--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "magento2-module",
   "minimum-stability": "stable",
   "require": {
-    "php": "~5.5.9|~7.0.0",
+    "php": "~5.5.0|~5.6.0|~7.0.0",
     "magento/framework": "100.0.*"
   },
   "autoload": {
